--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,10 +1,11 @@
 pipeline {
-  agent {
-    docker {
-     image 'cielocloud/maven-cielo-docker-agent:v1'
-      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
-    }
+ agent {
+  docker {
+    image 'cielocloud/maven-cielo-docker-agent:v1'
+    args '--user root -v /var/run/docker.sock:/var/run/docker.sock --privileged'
   }
+}
+
   stages {
     stage('Checkout') {
       steps {
