--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -4,6 +4,7 @@ pipeline {
     environment {
         // adjust if your Jenkins home is different
         MAVEN_CACHE = "${env.HOME}/.m2"
+        SONAR_TOKEN = credentials('SONAR_TOKEN')
     }
 
     stages {
@@ -33,11 +34,17 @@ pipeline {
             }
         }
 
-      stage('SonarQube') {
+ stage('SonarQube') {
+    agent {
+        docker {
+            image 'maven:3.8.6-openjdk-11'
+            args "-v ${MAVEN_CACHE}:/root/.m2"
+        }
+    }
     steps {
         dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
             sh '''
-              mvn sonar:sonar \
+              mvn verify sonar:sonar \
                 -Dsonar.projectKey=spring-boot-demo \
                 -Dsonar.host.url=http://localhost:9000 \
                 -Dsonar.login=${SONAR_TOKEN}
@@ -45,7 +52,6 @@ pipeline {
         }
     }
 }
-
         stage('Docker Build') {
             when { expression { return false } } // enable when you add Dockerfile
             steps {
