--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -15,24 +15,36 @@ pipeline {
             }
         }
 
-        stage('Build and Test') {
-            agent {
-                docker {
-                    image 'maven:3.8.6-openjdk-11'
-                    // share docker socket (for later stages) and Maven cache
-                    args "-v /var/run/docker.sock:/var/run/docker.sock -v ${MAVEN_CACHE}:/root/.m2"
-                }
-            }
-            steps {
-                dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
-                    sh '''
-                      mvn clean package -U -T 1C \
-                        --batch-mode \
-                        --no-transfer-progress
-                    '''
-                }
+      stage('Build and Push Docker Image') {
+    environment {
+        DOCKER_IMAGE = "cielocloud/jenkins:${BUILD_NUMBER}"
+    }
+    steps {
+        withCredentials([usernamePassword(
+            credentialsId: 'docker-cred',
+            usernameVariable: 'DOCKER_USERNAME',
+            passwordVariable: 'DOCKER_PASSWORD'
+        )]) {
+            script {
+                sh '''
+                  echo "Logging in to Docker Hub"
+                  echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+
+                  echo "Building Docker image"
+                  cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                  docker build -t ${DOCKER_IMAGE} .
+
+                  echo "Pushing Docker image"
+                  docker push ${DOCKER_IMAGE}
+
+                  echo "Docker images on Jenkins node:"
+                  docker images | grep ultimate-cicd || true
+                '''
             }
         }
+    }
+}
+
 
 stage('SonarQube Analysis') {
     agent {
